<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calmscape_bg"
    tools:context=".activities.CalendarActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-15dp">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="346dp"
        android:layout_height="323dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/btn_tasks"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:backgroundTint="#000000"
        android:fontFamily="sans-serif-medium"
        android:onClick="returnToTasks"
        android:text="@string/btn_listOfTasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryView"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="178dp"
        android:layout_height="56dp"
        android:backgroundTint="#000000"
        android:fontFamily="sans-serif-medium"
        android:onClick="finishTheForm"
        android:text="@string/btn_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryView"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/diaryView"
        android:layout_width="348dp"
        android:layout_height="232dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/hint_diaryCalendar"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelingTextView"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/feelingTextView"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:background="@drawable/textview_border2"
        android:hint="@string/hint_feeling_textView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.058" />

</androidx.constraintlayout.widget.ConstraintLayout>