<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calmscape_bg"
    tools:context=".activities.Task_Checklist"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-3dp">

    <Button
        android:id="@+id/btn_task_continue"
        android:layout_width="177dp"
        android:layout_height="72dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#000000"
        android:fontFamily="sans-serif-medium"
        android:onClick="proceed"
        android:text="@string/btn_continue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox_task_input"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="342dp"
        android:layout_height="179dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/textView_tasks"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="352dp"
        android:layout_height="109dp"
        android:layout_marginBottom="216dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/textView_newTask"
        android:textAlignment="center"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="353dp"
        android:layout_height="288dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/textView_task_list"
            android:layout_width="333dp"
            android:layout_height="345dp"
            android:background="@drawable/textview_border"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.185"></LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/textBox_task_input"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_task"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btn_new_task"
        android:layout_width="83dp"
        android:layout_height="85dp"
        android:backgroundTint="#000000"
        android:onClick="addTask"
        android:text="@string/btn_send"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="@+id/textBox_task_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>